# rofrof

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  apps.json  flood.yml  main.cpp
src/: Channel.h  ChannelManager.h  ChannelProtocolMessage.h  ClientMessage.h  IChannelManager.h  IMessage.h  IMessageCallable.h  IMessageComponent.h  MessageFactory.h  Payload.h  PerUserData.h  PresenceChannel.h  PrivateChannel.h  RofRofController.h  WebSocketHandler.h  main.cpp
src/apps/: App.h  AppManager.h  ConfigFileReader.h  IAppManager.h
src/channels/: Channel.h  ChannelManager.h  IChannel.h  IChannelManager.h  PresenceChannel.h  PrivateChannel.h
src/exceptions/: InvalidAppIdException.h  InvalidAppKeyException.h  InvalidAppSecretException.h  RofRofException.h  SignatureMismatchException.h
src/messages/: ChannelProtocolMessage.h  ClientMessage.h  IMessage.h  IMessageCallable.h  IMessageComponent.h  MessageFactory.h
src/utils/: Logger.h  utils.h
